# cbor-web-read

./: .gitignore  CBOR-WEB-MONETIZATION.md  CBOR-WEB-SPEC-v3.0.md  CHANGELOG.md  CONTRIBUTING.md  GITHUB_SETUP_GUIDE.md  LICENSE  README.md  STORY.md
.github/: SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: validation.yml
bench/: README.md  measure.sh
examples/: deltopide-com.cbor  deltopide-es.cbor  deltopide-fr.cbor  eloiseplot-dieteticienne.cbor  example-all-blocks.cbor  example-readable.json  laforetnousregale.cbor  pacific-planet.cbor  verdetao.cbor
tools/: Cargo.toml  README.md
tools/examples/: site.yaml
tools/src/: lib.rs
tools/tests/: sign_verify.rs
