[package]
name = "cbor-web-tools"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"
description = "Reference implementation of the CBOR-Web read protocol: validator, generator, decoder"
repository = "https://github.com/ploteddie-bit/cbor-web-read"
readme = "README.md"

[[bin]]
name = "cbor-web-validate"
path = "src/bin/validate.rs"

[[bin]]
name = "cbor-web-gen"
path = "src/bin/gen.rs"

[[bin]]
name = "cbor-web-decode"
path = "src/bin/decode.rs"

[[bin]]
name = "cbor-web-migrate"
path = "src/bin/migrate.rs"

[lib]
path = "src/lib.rs"

[dependencies]
ciborium = "0.2"
ciborium-io = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
sha2 = "0.10"

[profile.release]
opt-level = "z"
lto = true
strip = true
